shalinee | correct alignment of company name

--- a/apps/web-giddh/src/app/shared/header/header.component.scss
+++ b/apps/web-giddh/src/app/shared/header/header.component.scss
@@ -746,8 +746,11 @@ ul.sub-list {
 .unique-name-financial-year{
     display: flex;
     align-items: center;
-    .fyear{
-        margin-left: 5px;
+    flex-wrap: wrap;
+    .branch-unique-name{
+        margin-right: 5px;
+        white-space: normal;
+        word-break: break-word;
     }
 }
 .desktop-header{
